--- a/src/app/core/auth/register/register.component.html
+++ b/src/app/core/auth/register/register.component.html
@@ -1,27 +1,58 @@
-<div class="auth-container">
-    <h2>Register</h2>
-    <form (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" [(ngModel)]="username" name="username" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" [(ngModel)]="email" name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input type="text" id="firstName" [(ngModel)]="firstName" name="firstName" required>
-      </div>
-      <div class="form-group">
-        <label for="lastName">Last Name</label>
-        <input type="text" id="lastName" [(ngModel)]="lastName" name="lastName" required>
-      </div>
-      <button type="submit">Register</button>
-    </form>
-  </div>
+<div class="d-flex justify-content-center vh-100">
+  <div class="container my-auto" style="max-width:800px">
+    <mat-card>
+      <h2 class="align-self-center p-3">Register</h2>
+      <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+        <div class="row px-5">
+          <mat-form-field class="col">
+            <mat-label>Username</mat-label>
+            <input matInput type="text" formControlName="username" required>
+            <mat-error *ngIf="registrationForm.get('username')?.hasError('required')">Username is required</mat-error>
+          </mat-form-field>
   
+          <mat-form-field class="col">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" formControlName="password" required>
+            <mat-error *ngIf="registrationForm.get('password')?.hasError('required')">Password is required</mat-error>
+            <mat-error *ngIf="registrationForm.get('password')?.hasError('minlength')">Password must be at least 8 characters long</mat-error>
+          </mat-form-field>
+        </div>
+  
+        <div class="row px-5">
+          <mat-form-field class="col">
+            <mat-label>Email</mat-label>
+            <input matInput type="email" formControlName="email" required>
+            <mat-error *ngIf="registrationForm.get('email')?.hasError('required')">Email is required</mat-error>
+            <mat-error *ngIf="registrationForm.get('email')?.hasError('email')">Invalid email format</mat-error>
+          </mat-form-field>
+  
+          <mat-form-field class="col">
+            <mat-label>First Name</mat-label>
+            <input matInput type="text" formControlName="firstName" required>
+            <mat-error *ngIf="registrationForm.get('firstName')?.hasError('required')">First Name is required</mat-error>
+          </mat-form-field>
+  
+          <mat-form-field class="col">
+            <mat-label>Last Name</mat-label>
+            <input matInput type="text" formControlName="lastName" required>
+            <mat-error *ngIf="registrationForm.get('lastName')?.hasError('required')">Last Name is required</mat-error>
+          </mat-form-field>
+        </div>
+  
+        <div class="row px-5">
+          <mat-form-field class="col">
+            <mat-label>Confirm Password</mat-label>
+            <input matInput type="password" formControlName="confirmPassword" required>
+            <mat-error *ngIf="registrationForm.get('confirmPassword')?.hasError('required') && !passwordMismatch">Confirm Password is required</mat-error>
+            <mat-error *ngIf="passwordMismatch">Passwords do not match</mat-error>
+          </mat-form-field>
+        </div>
+  
+        <div class="row px-5">
+          <button class="col mx-5 mb-5 mt-2" mat-raised-button color="primary" type="submit">Register</button>
+          <button class="col mx-5 mb-5 mt-2" routerLink="/home" mat-raised-button color="accent" type="button">Login</button>
+        </div>
+      </form>
+    </mat-card>
+  </div>
+</div>
