add quill lib,connecting with api

--- a/src/app/core/auth/register/register.component.html
+++ b/src/app/core/auth/register/register.component.html
@@ -50,7 +50,7 @@
   
         <div class="row px-5">
           <button class="col mx-5 mb-5 mt-2" mat-raised-button color="primary" type="submit">Register</button>
-          <button class="col mx-5 mb-5 mt-2" routerLink="/home" mat-raised-button color="accent" type="button">Login</button>
+          <button class="col mx-5 mb-5 mt-2" routerLink="/main-page" mat-raised-button color="accent" type="button">Login</button>
         </div>
       </form>
     </mat-card>
