editing courses, adding lessons

--- a/src/app/components/courses-page/course/course.component.html
+++ b/src/app/components/courses-page/course/course.component.html
@@ -1,5 +1,5 @@
 
-    <mat-expansion-panel *ngIf="course && course.lessons && course.lessons.length > 0" class="expansion-panel" [expanded]="true">
+    <mat-expansion-panel *ngIf="course && course.lessons && course.lessons.length > 0" class="expansion-panel my-2" [expanded]="true">
         <mat-expansion-panel-header class="expansion-panel-header">
             <div class="container-fluid">
                 <div class="row">
