--- a/src/app/components/courses-page/courses-page.component.html
+++ b/src/app/components/courses-page/courses-page.component.html
@@ -1,11 +1,10 @@
 <div class="mt-4">
     <div *ngFor="let course of userCourses?.ownedCourses">
-        <app-course [owned]="true" [course]="course" [authService]="authservice"></app-course>
+        <app-course [course]="course" [authService]="authservice"></app-course>
     </div>
 
     <div *ngFor="let course of userCourses?.allCourses">
-test
-        <app-course [owned]="true" [course]="course" [authService]="authservice"></app-course>
+        <app-course-not-owned [course]="course" [authService]="authservice"></app-course-not-owned>
     </div>
     
 </div>
