--- a/src/app/components/courses-page/course-not-owned/course-not-owned.component.scss
+++ b/src/app/components/courses-page/course-not-owned/course-not-owned.component.scss
@@ -15,6 +15,11 @@
     cursor: pointer;
 }
 
-.fa-pencil {
+.ng-fa-icon {
     margin-left: 15px;
+}
+
+.lesson {
+    background-color: rgb(105, 105, 105);
+    cursor: pointer;
 }
