--- a/src/app/components/courses-page/course/course.component.scss
+++ b/src/app/components/courses-page/course/course.component.scss
@@ -9,3 +9,12 @@
 .card{
     background-color: rgb(51, 51, 51)
 }
+
+.ng-fa-icon {
+    margin-left: 15px;
+}
+
+.lesson {
+    background-color: rgb(105, 105, 105);
+    cursor: pointer;
+}
