--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -1,7 +1,9 @@
-.red{
-    border: 1px solid red;
-}
 
 .container-fluid, .row {
+    height: 100%;
+}
+
+.main {
+    overflow-y: auto;
     height: 100%;
 }
