--- a/src/app/components/courses-page/course-not-owned/course-not-owned.component.html
+++ b/src/app/components/courses-page/course-not-owned/course-not-owned.component.html
@@ -1,10 +1,10 @@
 <mat-card *ngIf="course" class="expansion-panel my-2 py-3">
-    <mat-card-header class="expansion-panel-header">
+    <mat-card-header class="expansion-panel-header mx-2">
         <div class="container-fluid">
             <div class="row">
               <div class="col-9">
-                <h3>{{course.title}} <i (click)="editCourse()" class="fa fa-solid fa-pencil fa-2xs" aria-hidden="true"> </i></h3>
-                <h5>{{course.description}}</h5>
+                <h3>{{course.title}} <fa-icon (click)="editCourse()" [icon]="faPencil"></fa-icon></h3>
+                <h5 class="ms-2">{{course.description}}</h5>
                 
               </div>
               <div class="col-3">
@@ -20,9 +20,24 @@
               </div> -->
             </div>
           </div>
-          
-
       </mat-card-header>
+      <div class="container-fluid">
+        <div class="mx-4">
+            <div *ngFor="let lesson of course.lessons">
+                <app-lesson [owned]="false" [lesson]="lesson"></app-lesson>
+            </div>
+        </div>
+      </div>
+      <div *ngIf="authService.loggedUser.isAdmin" class="container-fluid">
+        <div class="mx-4">
+            <mat-card class="lesson mt-3" (click)="createLesson()">
+                <mat-card-content>
+                    Dodaj lekcję
+                </mat-card-content>
+            </mat-card>
+        </div>
+      </div>
+
 </mat-card>
 
 
