--- a/src/app/components/courses-page/course/course.component.html
+++ b/src/app/components/courses-page/course/course.component.html
@@ -4,8 +4,8 @@
             <div class="container-fluid">
                 <div class="row">
                   <div class="col">
-                    <h3>{{course.title}}</h3>
-                    <h5>{{course.description}}</h5>
+                    <h3>{{course.title}} <fa-icon (click)="editCourse()" [icon]="faPencil"></fa-icon></h3>
+                    <h5 class="ms-2">{{course.description}}</h5>
                   </div>
                   <!-- <div class="col-md-1">
                     <button class="btn btn-primary" (click)="buyCourse()">Kup</button>
@@ -17,7 +17,16 @@
           </mat-expansion-panel-header>
           <div class="container-fluid">
             <div *ngFor="let lesson of course.lessons">
-                <app-lesson [lesson]="lesson"></app-lesson>
+                <app-lesson [owned]="true" [lesson]="lesson"></app-lesson>
+            </div>
+          </div>
+          <div *ngIf="authService.loggedUser.isAdmin" class="container-fluid">
+            <div>
+              <mat-card class="lesson my-3" (click)="createLesson()">
+                <mat-card-content>
+                    Dodaj lekcję
+                </mat-card-content>
+            </mat-card>
             </div>
           </div>
     </mat-expansion-panel>
