--- a/src/app/components/courses-page/courses-page.component.html
+++ b/src/app/components/courses-page/courses-page.component.html
@@ -1,10 +1,10 @@
 <div class="mt-4">
     <div *ngFor="let course of userCourses?.ownedCourses">
-        <app-course [course]="course" [authService]="authService"></app-course>
+        <app-course [course]="course"></app-course>
     </div>
 
     <div *ngFor="let course of userCourses?.allCourses">
-        <app-course-not-owned [course]="course" [authService]="authService"></app-course-not-owned>
+        <app-course-not-owned [course]="course"></app-course-not-owned>
     </div>
 
     <mat-card *ngIf="authService.loggedUser?.isAdmin">
