--- a/src/app/components/lesson-page/lesson-content.component.html
+++ b/src/app/components/lesson-page/lesson-content.component.html
@@ -4,7 +4,6 @@
         <div [routerLink]="'/main-page/lesson/' + lesson?.id" class="col-9">{{ lesson?.title }}</div><div class="col-2">Czas trwania: {{ lesson?.duration }}</div>
     </mat-card-header>
     <mat-card-content *ngIf="isAdmin">
-        <quill-editor [formControl]="quillForm" [modules]="editorConfig" style="background-color: white; color:black" (onEditorCreated)="test()"></quill-editor>
+        <div class="lesson-content" *ngIf="safeContent" [innerHTML]="safeContent"></div>
       </mat-card-content>
-      <button (click)="test()">test</button>
   </mat-card>
