--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import 'assets/quill.snow.css';
 @import 'assets/quill.core.css';
 @import "../node_modules/font-awesome/scss/font-awesome.scss";
+@import "../node_modules/video.js/src/css/video-js.scss";
 
 html, body { height: 100%;background-color: #333; color:white;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
