--- a/src/app/components/courses-page/course/course.component.html
+++ b/src/app/components/courses-page/course/course.component.html
@@ -4,7 +4,7 @@
             <div class="container-fluid">
                 <div class="row">
                   <div class="col">
-                    <h3>{{course.title}} <fa-icon (click)="editCourse()" [icon]="faPencil"></fa-icon></h3>
+                    <h3>{{course.title}} <fa-icon (click)="editCourse()" [icon]="faPencil"></fa-icon> <fa-icon (click)="deleteCourse()" [icon]="faXmark"></fa-icon></h3>
                     <h5 class="ms-2">{{course.description}}</h5>
                   </div>
                   <!-- <div class="col-md-1">
