--- a/src/app/components/lesson-page/lesson-content.component.scss
+++ b/src/app/components/lesson-page/lesson-content.component.scss
@@ -1,6 +1,54 @@
-:host {
-    .lesson-content > p > img{
-        border: 1px solid red;
-        width: 100px;
-    }
-  }
+
+.fa{
+    margin-right:10px;
+}
+.video-wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+.header-wrapper{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 50px;
+    align-items: center;
+    padding:10px;
+    background-color: rgb(94, 94, 94);
+    border-radius: 5px;
+}
+
+.lesson-list{
+    display:flex;
+    flex-direction: column;
+    height: 100%;
+    background-color: rgb(94, 94, 94);
+    border-radius: 5px;
+    padding:10px;
+    gap:10px;
+}
+
+.lesson-item{
+    background-color: rgb(70, 70, 70);
+    border-radius: 5px;
+    padding:10px;
+}
+
+.active {
+    background-color: rgb(50, 50, 50);
+}
+
+.lesson-content {
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 5px;
+    background-color: rgb(94, 94, 94);
+
+}
+
+.scroll-container{
+    border-radius: 5px;
+    max-height: 85vh;
+    overflow: auto;
+}
+
