--- a/src/app/core/auth/login/login.component.html
+++ b/src/app/core/auth/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="d-flex justify-content-center vh-100">
   <div class="container my-auto" style="max-width:800px">
-    <mat-card>
+    <mat-spinner style="margin:auto;" *ngIf="isLoading"></mat-spinner>
+    <mat-card *ngIf="!isLoading">
       <h2 class="align-self-center p-3">Login</h2>
       <form (ngSubmit)="onSubmit()">
         <div class="row px-5">
