--- a/src/app/shared/components/video-player/video-player.component.html
+++ b/src/app/shared/components/video-player/video-player.component.html
@@ -1,16 +1,15 @@
 
-  <video
+<video
     *ngIf="videoUrl"
     id="my-video"
     class="video-js vjs-theme-city"
     controls
     preload="auto"
-    width="640"
-    height="264"
+    width="100%"
     poster=""
     data-setup="{}"
   >
-    <source [src]="videoUrl" type="video/mp4" />
+    <source [src]="apiUrl+videoUrl" type="video/mp4" />
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a
       web browser that
