--- a/src/app/components/lesson-edit-page/lesson-edit-page.component.html
+++ b/src/app/components/lesson-edit-page/lesson-edit-page.component.html
@@ -23,6 +23,7 @@
         class="form-control"
       >
     </div>
+    {{this.videoUrl}}
     <app-video-player [videoUrl]="this.videoUrl"></app-video-player>
     <file-upload (fileUploaded)="handleFileUploaded($event)"></file-upload>
     <div class="form-group">
