--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <nav class="col-md-3 col-lg-2 d-md-block bg-dark sidebar">
+        <nav class="col-md-3 col-lg-2 d-md-block sidebar">
             <app-side-bar></app-side-bar>
         </nav>
 
