--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,8 +1,8 @@
 <div class="position-sticky">
     <div class="nav flex-column">
         <div class="nav-greetings">Witaj {{loggedUser?.firstName}} {{loggedUser?.lastName}}!</div>
-        <a class="nav-item" [routerLink]="['/main-page/course-page']">Strona główna</a>
-        <a href="#" class="nav-item">Ustawienia</a>
-        <a href="#"  class="nav-item" (click)="Logout()">Wyloguj</a>
+        <a class="nav-item" [routerLink]="['/main-page/course-page']"><fa-icon [icon]="faHouse"></fa-icon>Strona główna</a>
+        <a href="#" class="nav-item"><fa-icon [icon]="faSliders"></fa-icon>Ustawienia</a>
+        <a href="#"  class="nav-item" (click)="Logout()"><fa-icon [icon]="faRightFromBracket"></fa-icon>Wyloguj</a>
     </div>
 </div>
