--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -4,14 +4,14 @@
     margin: 5px 0px;
     background-color: rgb(54, 54, 54);
     cursor: pointer;
-    font-weight: 700;
-    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 1);
-    transition: transform 0.5s ease-out;
+    font-size: 12px;
+    font-weight: 500;
+    transition: transform 0.1s ease-out;
 }
 
 .nav-item:hover{
     transform: scale(1.01);
-    transition: 0.5s;
+    transition: 0.1s;
 }
 
 .nav-greetings{
@@ -23,4 +23,8 @@
 a{
     color:white;
     text-decoration: none;
+}
+
+fa-icon {
+    margin-right: 10px;
 }
