implemented video converion status (websocket)

--- a/src/app/components/lesson-page/lesson-content.component.html
+++ b/src/app/components/lesson-page/lesson-content.component.html
@@ -10,8 +10,12 @@
         <div class="row">
             <div class="col scroll-container gradient">
                 <div class="video-wrapper">
-        
-                    <app-video-player [videoUrl]="lesson?.video"></app-video-player>
+                    <div *ngIf="progress" class="progress-container">
+                        <div class="progress-info">Trwa konwersja video...</div>
+                        <mat-progress-bar mode="determinate" value={{progress}}></mat-progress-bar>
+                        <div class="progress-info">{{progress}} %</div>
+                    </div>
+                    <app-video-player *ngIf="!progress" [videoUrl]="lesson?.video"></app-video-player>
                 </div>
                 <div class="lesson-content" *ngIf="safeContent" [innerHTML]="safeContent"></div>
             </div>
