--- a/src/app/core/auth/login/login.component.html
+++ b/src/app/core/auth/login/login.component.html
@@ -1,27 +1,23 @@
-<div class="d-flex justify-content-center vh-100">
-  <div class="container my-auto" style="max-width:800px">
-    <mat-spinner style="margin:auto;" *ngIf="isLoading"></mat-spinner>
-    <mat-card *ngIf="!isLoading">
-      <h2 class="align-self-center p-3">Login</h2>
-      <form (ngSubmit)="onSubmit()">
-        <div class="row px-5">
-          <mat-form-field class="col">
-            <mat-label>Username</mat-label>
-            <input matInput type="text" [(ngModel)]="username" name="username" required>
-          </mat-form-field>
-    
-          <mat-form-field class="col">
-            <mat-label>Password</mat-label>
-            <input matInput type="password" [(ngModel)]="password" name="password" required>
-          </mat-form-field>
+<div class="login-page">
+  <div class="login-card">
+    <div class="left">
+      <div class="logo"></div>
+      <div class="login-form">
+        <div class="title">Let's get <span class="gradient-title">creative</span></div>
+        <div class="description">Log in to Aritificulum to start creating magic.</div>
+        <div class="form-inputs">
+          <app-custom-input [inputIcon]="'letter'" [inputStyle]="''" [disabled]="false" [inputPlaceholder]="'Login'" [inputLabel]="''" [inputHint]="''"></app-custom-input>
+          <app-custom-input [inputIcon]="'lock'" [inputStyle]="''" [disabled]="false" [inputPlaceholder]="'Password'" [inputLabel]="''" [inputHint]="''"></app-custom-input>
         </div>
-  
-        <div class="row px-5">        
-          <button class="col mx-5 mb-5 mt-2" mat-raised-button color="primary" type="submit">Login</button>
-          <button class="col mx-5 mb-5 mt-2" routerLink="/register" mat-raised-button color="accent" type="button">Register</button>
-        </div>
-        
-      </form>
-    </mat-card>
+       <div class="form-checkbox">
+        <input type="checkbox">
+        <div class="custom-icon"></div>
+        <label>Remember me</label>
+        <span>Forgot Password?</span>
+       </div>
+      </div>
+      <div class="footer">Don't have an account? <span class="gradient-text">Sign Up</span></div>
+    </div>
+    <div class="right"></div>
   </div>
 </div>
