new login page design

--- a/src/app/components/layout/custom-checkbox/custom-checkbox.component.html
+++ b/src/app/components/layout/custom-checkbox/custom-checkbox.component.html
@@ -1,1 +1,8 @@
-<p>custom-checkbox works!</p>
+<div class="checkbox-wrapper" (click)="onClick()">
+    <div class="checkbox">
+        <input type="checkbox" [checked]="checked">
+        <div *ngIf="checked" class="checkbox-icon"></div>
+    </div>
+    <label *ngIf="label" class="checkbox-text">{{label}}</label>
+</div>
+
