--- a/src/app/components/layout/custom-input/custom-input.component.html
+++ b/src/app/components/layout/custom-input/custom-input.component.html
@@ -1,5 +1,6 @@
 <div [class]="wrapperClass">
     <div *ngIf="inputLabel" class="label">{{inputLabel}}</div>
-        <input [style]="inputIconStyle" [disabled]="disabled" [class]="inputClass" [placeholder]="inputPlaceholder"/>
+        <input [type]="type" [style]="inputIconStyle" [disabled]="disabled" [class]="inputClass" [placeholder]="inputPlaceholder"         [(ngModel)]="value"
+        (input)="handleOnChange($event)"/>
     <div *ngIf="inputHint" [class]="hintTextClass"><div [class]="hintIconClass"></div>{{inputHint}}</div>
 </div>  
