--- a/src/app/components/layout/custom-input/custom-input.component.scss
+++ b/src/app/components/layout/custom-input/custom-input.component.scss
@@ -71,7 +71,7 @@
 
 .custom-input{
     display: flex;
-    width: 496px;
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
@@ -115,13 +115,17 @@ letter-spacing: 0.15px;
 }
 
 input {
-    color: var(--noble-black-300, #9B9C9E);
+    background: none;
+    border: none;
+
+    color: var(--noble-black-0, #FFF);
+
+    /* Body/L/Medium */
     font-family: Plus Jakarta Sans;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px; /* 150% */
     letter-spacing: 0.15px;
-    background: none;
-    border: none;
+    caret-color: #82DBF7
 }
