--- a/src/app/core/auth/login/login.component.html
+++ b/src/app/core/auth/login/login.component.html
@@ -3,21 +3,24 @@
     <div class="left">
       <div class="logo"></div>
       <div class="login-form">
-        <div class="title">Let's get <span class="gradient-title">creative</span></div>
-        <div class="description">Log in to Aritificulum to start creating magic.</div>
+        <div class="title">Poznaj<span class="gradient-title">AI</span></div>
+        <div class="description">Miejsce w którym dowiesz się wszystkiego o AI!</div>
         <div class="form-inputs">
-          <app-custom-input [inputIcon]="'letter'" [inputStyle]="''" [disabled]="false" [inputPlaceholder]="'Login'" [inputLabel]="''" [inputHint]="''"></app-custom-input>
-          <app-custom-input [inputIcon]="'lock'" [inputStyle]="''" [disabled]="false" [inputPlaceholder]="'Password'" [inputLabel]="''" [inputHint]="''"></app-custom-input>
+          <app-custom-input [inputIcon]="'letter'" [(value)]="username" [inputStyle]="''" [disabled]="false" [inputPlaceholder]="'Login'" [inputLabel]="''" [inputHint]="''"></app-custom-input>
+          <app-custom-input [inputIcon]="'lock'" [type]="'password'" [(value)]="password"  [inputStyle]="''" [disabled]="false" [inputPlaceholder]="'Hasło'" [inputLabel]="''" [inputHint]="''"></app-custom-input>
         </div>
-       <div class="form-checkbox">
-        <input type="checkbox">
-        <div class="custom-icon"></div>
-        <label>Remember me</label>
-        <span>Forgot Password?</span>
+       <div class="bottom">
+        <app-custom-checkbox [(checked)]="isChecked" [label]="'Zapamiętaj mnie'"></app-custom-checkbox>
+        <a class="gradient-text bottom-text" href="#" >Zapomniałeś hasła?</a>
+       </div>
+       <div class="buttons">
+        <app-custom-button type="big" (click)="onSubmit()">Zaloguj</app-custom-button>
        </div>
       </div>
-      <div class="footer">Don't have an account? <span class="gradient-text">Sign Up</span></div>
+      <div class="footer">Nie masz konta? <span class="gradient-text">Zarejestruj się</span></div>
     </div>
-    <div class="right"></div>
+    <div [class]="rightClasses">    <div [class]="loaderClasses">
+      <span class="loader"></span>
+  </div></div>
   </div>
 </div>
