--- a/src/app/core/auth/login/login.component.scss
+++ b/src/app/core/auth/login/login.component.scss
@@ -2,14 +2,21 @@
     display:flex;
     width:100%;
     background-color: #131619;
+    overflow: hidden;
 }
 
 .login-page{
     display:flex;
     position: relative;
-    height: 100vh;
+    height: 100%;
+    width:100%;
     margin: 0 auto;
     font-family: Plus Jakarta Sans;
+    overflow: hidden;
+}
+
+.bottom-text {
+    font-weight: 600;
 }
 
 .logo{
@@ -23,12 +30,15 @@
 }
 
 .footer{
-    margin-left: 48px;
-    margin-top:135px;
+    position: absolute;
+    left:3.33333333333333%;
+    bottom: 4.6875%;
     color:#686B6E;
-    font-size: 16pt;
+    font-size: 14pt;
     font-weight:600;
+
 }
+
 
 .gradient-text {
     background: var(--gradients-blue-green-500, linear-gradient(45deg, #82DBF7 0%, #B6F09C 100%));
@@ -57,7 +67,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 44px;
-    margin-bottom: 24px;
 }
 
 .description{
@@ -69,7 +78,6 @@
     font-weight: 500;
     line-height: 28px;
     letter-spacing: 0.15px;
-    margin-bottom: 64px;
 }
 
 .left{
@@ -81,64 +89,161 @@
     display:flex;
     flex-direction: column;
     position: relative;
-    width:496px;
+    width:68.19444444444444%;
     height:610px;
-    margin-left: 112px;
-    margin-top: 127px;
+    margin:auto;
+    margin-top: 21.09375%;
+    gap: 48px;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: stretch;
+}
+
+.bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+    color: var(--noble-black-200, #CDCECF);
+    font-family: Plus Jakarta Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.15px;
 }
 
 .form-inputs{
-    display:flex;
-    flex-direction: column;
-    gap:24px;
-    margin-bottom: 48px;
-}
-
-
-input[type="checkbox"] {
-    appearance: none;
-    width: 24px;
-    height: 24px;
-    border-radius: 4px;
-    border: 1px solid var(--noble-black-500, #363A3D);
-    background: var(--noble-black-600, #1A1D21);
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.05), 0px 1px 2px -1px rgba(0, 0, 0, 0.05);
-}
-
-  
-
-  input[type="checkbox"]:checked {
-    appearance: none;
     display: flex;
-    width: 24px;
-    height: 24px;
-    padding: 6px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    border-radius: 4px;
-    background: var(--gradients-day-blue-blue-green-500, linear-gradient(45deg, #4D62E5 0%, #87DDEE 45.31%, #B6F09C 100%));
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.05), 0px 1px 2px -1px rgba(0, 0, 0, 0.05);
-  }
-
-  input[type="checkbox"]:not(:checked):hover {
-    appearance: none;
-    width: 24px;
-    height: 24px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    border: 2px solid var(--noble-black-500, #363A3D);
-    background: var(--noble-black-600, #1A1D21);
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.05), 0px 1px 2px -1px rgba(0, 0, 0, 0.05);
+    flex-direction: column;
+    gap: 24px;
 }
+
 
 
 .right{
-    width:50%;
+    position:absolute;
+    left: 50%;
+    width:100%;
     height:100%;
     background-image: url("../../../../assets/images/login-page-background.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 24px 0px 0px 24px;
+    transition: 0.5s; // Dodaj animację przejścia na właściwość width
+    display: flex;
+    align-items: center; /* Wyśrodkuj wertykalnie */
+    justify-content: center; /* Wyśrodkuj horyzontalnie */
+
+    &.right-full {
+        left: 0%;
+        border-radius: 0px;
+        animation: pulse 1s infinite; // Ustawienie animacji pulsacji
+    }
+    
+    @keyframes pulse {
+        0% {
+            transform: scale(1); // Początkowy rozmiar
+            box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.7); // Początkowy cień
+        }
+        50% {
+            transform: scale(1.02); // Rozmiar w połowie animacji
+            box-shadow: 0 0 20px 10px rgba(0, 123, 255, 0.3); // Cień w połowie animacji
+        }
+        100% {
+            transform: scale(1); // Końcowy rozmiar
+            box-shadow: 0 0 0 0 rgba(0, 123, 255, 0); // Końcowy cień
+        }
+    }
+
+    .loader {
+        width: 128px;
+        height: 128px;
+        display: inline-block;
+        position: absolute;
+
+      }
+      .loader::after,
+      .loader::before {
+        content: '';  
+        box-sizing: border-box;
+        width: 128px;
+        height: 128px;
+        border-radius: 50%;
+        border: 4px solid #FFF;
+        position: absolute;
+        animation: animloader 2s linear infinite;
+      }
+      .loader::after {
+        animation-delay: 1s;
+      }
+      
+      @keyframes animloader {
+        0% {
+          transform: scale(0);
+          opacity: 1;
+        }
+        100% {
+          transform: scale(1);
+          opacity: 0;
+        }
+      }
+    
+}
+
+.loader-container {
+    position: relative;
+    width: 128px;
+    height: 128px;
+    opacity: 0;
+    transition: 0.5s;
+
+    &.loader-center{
+        opacity: 1;
+    }
+}
+
+@media (max-width: 1000px) {
+    .footer {
+        font-size: 13pt; /* Dostosuj wielkość czcionki do mniejszej szerokości ekranu */
+    }
+}
+
+@media (max-width: 900px) {
+    .footer {
+        font-size: 12pt; /* Dostosuj wielkość czcionki do mniejszej szerokości ekranu */
+    }
+
+    .right{
+        display: none;
+    }
+
+    .left{
+        width: 100%;
+    }
+}
+
+@media (max-width: 500px) {
+    .login-form{
+        width: 90%;
+    }
+    .logo{margin-left:5%;}
+}
+
+@media (max-height: 806px) {
+    .login-form{
+        gap:36px;
+        margin-top: 11%;
+    }
+}
+@media (max-height: 685px) {
+    .login-form{
+        gap:24px;
+        margin-top: 5%;
+    }
 }
