--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 @import "../node_modules/video.js/src/css/video-js.scss";
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
 
-html, body { height: 100%;background-color: #000; color:white;}
+html, body { height: 100%;background-color: #000; color:white; overflow: hidden;}
 body { margin: 0; }
 
 body,html {
