--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -25,7 +25,7 @@
     height:32px;
     margin-top: 48px;
     margin-left: 48px;
-    background-image: url("../../../../assets/images/logo.svg"); 
+    background-image: url("../../../assets/images/logo.svg"); 
     background-size: cover;
 }
 
@@ -130,7 +130,7 @@
     left: 50%;
     width:100%;
     height:100%;
-    background-image: url("../../../../assets/images/login-page-background.svg");
+    background-image: url("../../../assets/images/login-page-background.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
