--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -12,9 +12,10 @@
     display: flex;
     width: 100%;
     gap: 12px;
-    border: 1px solid red;
-    padding: 10px; /* Dodanie paddingu dla .main, aby oddzielić od .sidebar */
-    box-sizing: border-box; /* Upewnienie się, że padding nie zwiększa szerokości */
+    padding: 10px;
+    box-sizing: border-box;
+    max-height: 100%;
+    overflow-y: auto;
 }
 
 .sidebar{
