--- a/src/app/shared/components/custom-button/custom-button.component.html
+++ b/src/app/shared/components/custom-button/custom-button.component.html
@@ -1,4 +1,4 @@
-<button [class]="['button', 'button-' + type]">
+<button [class]="['button', 'button-' + type]" [disabled]="disabled">
     <ng-content></ng-content>
   </button>
   
