implemented email activation process

--- a/src/app/shared/components/register-form/register-form.component.html
+++ b/src/app/shared/components/register-form/register-form.component.html
@@ -68,8 +68,7 @@
             [disabled]="false" 
             [inputPlaceholder]="'Hasło'" 
             [inputLabel]="''" 
-            [inputHint]="passwordInputError"
-            (input)="validatePassword()">
+            [inputHint]="passwordInputError">
           </app-custom-input>
         </div>
         <div class="col">
@@ -81,8 +80,7 @@
             [disabled]="false" 
             [inputPlaceholder]="'Potwórz hasło'" 
             [inputLabel]="''" 
-            [inputHint]="''"
-            (input)="validatePassword()">
+            [inputHint]="''">
           </app-custom-input>
         </div>
       </div>
