--- a/src/app/shared/components/register-form/register-form.component.scss
+++ b/src/app/shared/components/register-form/register-form.component.scss
@@ -111,7 +111,9 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
+    padding: 0px 30px;
     margin-top: 30vh;
+    text-align: center;
 }
 
 .icon {
